fix issues on mobile/desktop redeem

--- a/server/projects/kikbak/WebContent/css/style.css
+++ b/server/projects/kikbak/WebContent/css/style.css
@@ -253,7 +253,7 @@ strong{
     font-size: 20px;
     line-height: 24px;
     text-align: center;
-    margin-bottom: 25px;
+    margin-bottom: 5px;
     margin-top: 25px;
 }
 #main-right #ribbon{
