--- a/server/projects/webclient/css/kikbak.css
+++ b/server/projects/webclient/css/kikbak.css
@@ -958,8 +958,9 @@ p.msg {
 
 .cls-popup h3 {
     color: #3A3A3A;
-    font-size: 23px;
+    font-size: 15px;
     text-align: center;
+    font-weight: normal;
 }
 .cls-popup h1 {
     color: #3A3A3A;
@@ -1095,8 +1096,9 @@ p.msg {
 }
 .actbrd {
     position: absolute;
-    right: 3px;
-    top: 11px;
+    right: 0px;
+    top: 8px;
+    height:30px;
     z-index: 999;
 }
 
@@ -1427,6 +1429,11 @@ h1.pg-hedng {
     margin-bottom: 12px;
     color: #999;
     font-size: 13px;
+}
+
+#friend-list .avatar {
+    float: left;
+    width: 40px;
 }
 
 @-webkit-keyframes spinnerRotate {
